[package]
name = "oz-relay-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OIP (Open Intent Protocol) types — A2A-compatible intent schema, task lifecycle, artifact manifest"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
