[package]
name = "oz-relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OZ Relay Server — A2A-compliant build relay for agent-mediated contributions via OIP"

[[bin]]
name = "oz-relay-server"
path = "src/main.rs"

[dependencies]
oz-relay-common = { path = "../oz-relay-common" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
jsonwebtoken = "9"
tokio-stream = "0.1"
regex = "1"
ring = "0.17"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
